2006-09-26 [colin]	2.5.2cvs1

	* src/Makefile.am
	* src/addr_compl.c
	* src/addr_compl.h
	* src/addrbook.c
	* src/addrbook.h
	* src/addressbook.c
	* src/addrindex.c
	* src/addrindex.h
	* src/compose.c
	* src/prefs_common.c
	* src/prefs_filtering_action.c
	* src/prefs_folder_item.c
	* src/prefs_template.c
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/pixmaps/addr_one.xpm
	* src/pixmaps/addr_two.xpm
		Add auto-completion on groups

2006-09-26 [colin]	2.5.2

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.2 released

2006-09-26 [colin]	2.5.1cvs5

	* src/matcher.c
		Fix condition

2006-09-26 [colin]	2.5.1cvs4

	* src/mbox.c
		Revert cvs1 (useless as the message is printed 
		every 500 mails)

2006-09-26 [colin]	2.5.1cvs3

	* src/partial_download.c
		Fix crasher found by Alexsandar Urosevic

2006-09-26 [colin]	2.5.1cvs2

	* src/summaryview.c
		Fix bug #1023 (Sylpheed deletes too much messages)

2006-09-26 [ticho]	2.5.1cvs1

	* src/mbox.c
		Make use of gettext's multiple plurals for statusbar
		progress message.

2006-09-25 [paul]	2.5.1

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.1 released

2006-09-25 [colin]	2.5.0cvs3

	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/spamassassin/spamassassin.c
		BogoFilter, Spamassassin: Fix double hook registering after
		visiting preferences
		Spamassassin, Clamav: Just set the mails to move instead of
		doing the move - caller will move the things at once.

2006-09-25 [colin]	2.5.0cvs2

	* src/imap.c
	* src/etpan/imap-thread.c
		Use UID SEARCH ALL instead of UID 1:*
		(braindead servers can't figure out that's
		the same...)

2006-09-25 [wwp]	2.5.0cvs1

	* src/message_search.c
		Added the ability to stop a running search (in message body).

2006-09-25 [paul]	2.5.0

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.0 released

2006-09-25 [paul]	2.4.0cvs214

	* po/cs.po
	* po/de.po
	* po/fi.po
	* po/fr.po
	* po/nl.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
	* po/zh_CN.po