@@ -1915,3 +1915,4 @@
 ( cvs diff -u -r 1.28.2.27 -r 1.28.2.28 src/mbox.c;  ) > 2.5.1cvs4.patchset
 ( cvs diff -u -r 1.75.2.30 -r 1.75.2.31 src/matcher.c;  ) > 2.5.1cvs5.patchset
 ( cvs diff -u -r 1.155.2.41 -r 1.155.2.42 src/Makefile.am;  cvs diff -u -r 1.27.2.20 -r 1.27.2.21 src/addr_compl.c;  cvs diff -u -r 1.8.2.5 -r 1.8.2.6 src/addr_compl.h;  cvs diff -u -r 1.22.2.8 -r 1.22.2.9 src/addrbook.c;  cvs diff -u -r 1.7.2.1 -r 1.7.2.2 src/addrbook.h;  cvs diff -u -r 1.60.2.63 -r 1.60.2.64 src/addressbook.c;  cvs diff -u -r 1.28.2.18 -r 1.28.2.19 src/addrindex.c;  cvs diff -u -r 1.9.2.7 -r 1.9.2.8 src/addrindex.h;  cvs diff -u -r 1.382.2.310 -r 1.382.2.311 src/compose.c;  cvs diff -u -r 1.204.2.102 -r 1.204.2.103 src/prefs_common.c;  cvs diff -u -r 1.1.4.30 -r 1.1.4.31 src/prefs_filtering_action.c;  cvs diff -u -r 1.52.2.23 -r 1.52.2.24 src/prefs_folder_item.c;  cvs diff -u -r 1.12.2.30 -r 1.12.2.31 src/prefs_template.c;  cvs diff -u -r 1.25.2.27 -r 1.25.2.28 src/stock_pixmap.c;  cvs diff -u -r 1.18.2.18 -r 1.18.2.19 src/stock_pixmap.h;  diff -u /dev/null src/pixmaps/addr_one.xpm;  diff -u /dev/null src/pixmaps/addr_two.xpm;  ) > 2.5.2cvs1.patchset
+( cvs diff -u -r 1.27.2.21 -r 1.27.2.22 src/addr_compl.c;  cvs diff -u -r 1.8.2.6 -r 1.8.2.7 src/addr_compl.h;  ) > 2.5.2cvs2.patchset
